Nikhil's Org/src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <description>Board</description>
        <label>Board</label>
        <picklist>
            <picklistValues>
                <fullName>Rajasthan Board</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CBSE Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U. P Board</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClassTeacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ClassTeacher</description>
        <label>ClassTeacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Detailed Description</description>
        <label>Detailed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <description>Fee</description>
        <label>Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxSize__c</fullName>
        <description>MaxSize</description>
        <label>MaxSize</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyCount__c</fullName>
        <description>MyCount</description>
        <label>MyCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>90</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Students__c</fullName>
        <description>Number Of Students</description>
        <label>Number Of Students</label>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>